--- a/_config.yml
+++ b/_config.yml
@@ -3,10 +3,7 @@ author:
   name: GitHub User
   email: qinlei9696@163.com
 description: > # this means to ignore newlines until "show_excerpts:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
-
+ Welcome to the Totoro6!
 show_excerpts: false # set to true to show excerpts on the homepage
 
 
